# assume-py

./: .gitignore  EXAMPLE.assume.yaml  LICENSE.txt  README.md  assume.py  assume_alias.bash  assume_wrapper.bash  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github-actions.yml
assume_py/: aws.py  config.py  main.py
tests/: test_assume-py.py
